--- a/templates/cloudflare-secret.yaml.j2
+++ b/templates/cloudflare-secret.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: '{{ cloudflare_kubernetes_secret }}'
+  name: cloudflare-api-key-secret
   namespace: '{{ cert_manager_namespace }}'
 stringData:
   email: '{{ cloudflare_email | b64encode }}'
