Remove nested variables

--- a/templates/acme-clusterissuer.yaml.j2
+++ b/templates/acme-clusterissuer.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   name: {{ _cluster_issuer_name }}
 spec:
   acme:
-    email: {{ letsencrypt.email }}
+    email: {{ letsencrypt_email }}
     server: {{ _cert_issuer_server }}
 
     privateKeySecretRef:
