Fix cloudflare data field

--- a/templates/cloudflare-secret.yaml.j2
+++ b/templates/cloudflare-secret.yaml.j2
@@ -4,6 +4,6 @@ type: Opaque
 metadata:
   name: cloudflare-api-key-secret
   namespace: '{{ cert_manager_namespace }}'
-stringData:
+data:
   email: '{{ cloudflare_email | b64encode }}'
   api-token: '{{ cloudflare_key | b64encode }}'
