normalize variable name

--- a/templates/cloudflare-secret.yaml.j2
+++ b/templates/cloudflare-secret.yaml.j2
@@ -6,4 +6,4 @@ metadata:
   namespace: '{{ cert_manager_namespace }}'
 data:
   email: '{{ cloudflare_email | b64encode }}'
-  api-token: '{{ cloudflare_key | b64encode }}'
+  api-token: '{{ cloudflare_token | b64encode }}'
